// Copyright 2026 Yellowbrick Data, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package ai.floedb.floecat.connector;
option java_multiple_files = true;
option java_package = "ai.floedb.floecat.connector.rpc";

import "floecat/common/common.proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/field_mask.proto";

enum ConnectorKind {
  CK_UNSPECIFIED = 0;
  CK_ICEBERG = 1;
  CK_DELTA = 2;
  CK_GLUE = 3;
  CK_UNITY = 4;
}

message NamespacePath {
  repeated string segments = 1;
}

message SourceSelector {
  NamespacePath namespace = 1;
  optional string table = 2;
  repeated string columns = 3;
}

message DestinationTarget {
  oneof catalog_ref {
    ai.floedb.floecat.common.ResourceId catalog_id = 1;
    string catalog_display_name = 2;
  }

  oneof namespace_ref {
    ai.floedb.floecat.common.ResourceId namespace_id = 10;
    NamespacePath namespace = 11;
  }

  oneof table_ref {
    ai.floedb.floecat.common.ResourceId table_id = 20;
    string table_display_name = 21;
  }
}

message Connector {
  ai.floedb.floecat.common.ResourceId resource_id = 1;
  string display_name = 2;
  optional string description = 3;
  ConnectorKind kind = 4;
  SourceSelector source = 10;
  DestinationTarget destination = 11;
  string uri = 20; 
  AuthConfig auth = 22;
  ReconcilePolicy policy = 30;
  google.protobuf.Timestamp created_at = 40;
  google.protobuf.Timestamp updated_at = 41;
  ConnectorState state = 42;
  map<string,string> properties = 99;
}

enum ConnectorState {
  CS_UNSPECIFIED = 0;
  CS_ACTIVE = 1;
  CS_PAUSED = 2;
  CS_DELETING = 3;
}

message AuthConfig {
  string scheme = 1;                    // Auth scheme name (e.g., oauth2, aws-sigv4).
  map<string,string> header_hints = 3;  // Extra headers to send to upstream APIs.
  oneof auth_credentials {
    string secret_ref = 10;             // Reference to a stored secret for resolution.
    AuthCredentials credentials = 11;   // Inline credentials for this connector.
  }
  map<string,string> properties = 99;   // Additional auth properties.
}

message AuthCredentials {
  message BearerToken {
    string token = 1; // Bearer access token.
  }

  message ClientCredentials {
    string client_id = 1;     // OAuth client ID.
    string client_secret = 2; // OAuth client secret.
  }

  message TokenExchange {
    string endpoint = 2;                // Token exchange endpoint URL.
    string subject_ref = 3;             // Reference to subject token for exchange.
    string subject_token_type = 4;      // Subject token type (RFC 8693).
    string requested_token_type = 5;    // Requested token type (RFC 8693).
    string audience = 6;                // Audience for the exchanged token.
    string scope = 7;                   // Scope for the exchanged token.
    map<string,string> properties = 14; // Exchange-specific parameters.
    map<string,string> headers = 15;    // Exchange-specific headers.
  }

  message Rfc8693TokenExchange {
    TokenExchange base = 1; // RFC 8693 exchange parameters.
  }

  message AzureTokenExchange {
    TokenExchange base = 1; // Azure Entra OBO exchange parameters.
  }

  message GcpTokenExchange {
    TokenExchange base = 1;                          // Base token exchange settings (scope, endpoint, headers).
    optional string service_account_email = 2;      // Service account email (iss) for JWT bearer grant.
    optional string delegated_user = 3;             // Workspace user email (sub) to impersonate.
    optional string service_account_private_key_pem = 4; // PKCS#8 private key PEM for signing the JWT.
    optional string service_account_private_key_id = 5;  // Optional key id (kid) for JWT header.
    optional string token_endpoint = 6;             // Optional token endpoint (default https://oauth2.googleapis.com/token).
    optional int32 jwt_lifetime_seconds = 7;        // Optional JWT lifetime in seconds (1..3600).
  }

  message AwsCredentials {
    string access_key_id = 1;     // AWS access key ID.
    string secret_access_key = 2; // AWS secret access key.
    string session_token = 3;     // AWS session token (optional).
  }

  message AwsWebIdentity {
    string role_arn = 1;               // Role ARN to assume.
    string role_session_name = 2;      // Session name for the role session.
    string provider_id = 3;            // Optional OIDC provider ID.
    int32 duration_seconds = 4;        // Optional session duration in seconds.
  }

  message AwsAssumeRole {
    string role_arn = 1;          // Role ARN to assume.
    string role_session_name = 2; // Session name for the role session.
    string external_id = 3;       // External ID for cross-account assume role.
    int32 duration_seconds = 4;   // Optional session duration in seconds.
  }

  oneof credential {
    BearerToken bearer = 1;               // Bearer access token.
    ClientCredentials client = 2;         // OAuth client credentials.
    AwsCredentials aws = 4;               // Static AWS credentials.
    AwsWebIdentity aws_web_identity = 5;  // AWS web identity configuration.
    AwsAssumeRole aws_assume_role = 6;    // AWS assume role configuration.
    Rfc8693TokenExchange rfc8693_token_exchange = 7; // RFC 8693 token exchange.
    AzureTokenExchange azure_token_exchange = 8; // Azure Entra OBO exchange.
    GcpTokenExchange gcp_token_exchange = 9; // GCP domain-wide delegation exchange.
  }
  map<string,string> properties = 20;  // Additional auth properties.
  map<string,string> headers = 21;     // Additional auth headers.
}

message ReconcilePolicy {
  google.protobuf.Duration interval = 1;
  bool enabled = 2;
  int32 max_parallel = 3;
  google.protobuf.Timestamp not_before = 4;
}

message ConnectorSpec {
  optional string display_name = 1;
  optional string description = 2;
  ConnectorKind kind = 3;
  SourceSelector source = 10;
  DestinationTarget destination = 11;
  optional string uri = 20;
  AuthConfig auth = 21;
  ReconcilePolicy policy = 30;
  map<string,string> properties = 99;
}

message CreateConnectorRequest {
  ConnectorSpec spec = 1;
  ai.floedb.floecat.common.IdempotencyKey idempotency = 2;
}
message CreateConnectorResponse {
  Connector connector = 1;
  ai.floedb.floecat.common.MutationMeta meta = 2;
}

message GetConnectorRequest {
  ai.floedb.floecat.common.ResourceId connector_id = 1;
}
message GetConnectorResponse {
  Connector connector = 1;
}

message ListConnectorsRequest {
  ai.floedb.floecat.common.PageRequest page = 1;
  string kind = 3;
}
message ListConnectorsResponse {
  repeated Connector connectors = 1;
  ai.floedb.floecat.common.PageResponse page = 2;
}

message UpdateConnectorRequest {
  ai.floedb.floecat.common.ResourceId connector_id = 1;
  ConnectorSpec spec = 2;
  ai.floedb.floecat.common.Precondition precondition = 3;
  google.protobuf.FieldMask update_mask = 4;
}
message UpdateConnectorResponse {
  Connector connector = 1;
  ai.floedb.floecat.common.MutationMeta meta = 2;
}

message DeleteConnectorRequest {
  ai.floedb.floecat.common.ResourceId connector_id = 1;
  ai.floedb.floecat.common.Precondition precondition = 2;
}
message DeleteConnectorResponse {
  ai.floedb.floecat.common.MutationMeta meta = 1;
}

message ValidateConnectorRequest {
  ConnectorSpec spec = 1;
}
message ValidateConnectorResponse {
  bool ok = 1;
  string summary = 2;
  map<string,string> capabilities = 3;
}

message SyncCaptureRequest {
  ai.floedb.floecat.common.ResourceId connector_id = 1;
  repeated NamespacePath destination_namespace_paths = 2;
  string destination_table_display_name = 3;
  repeated string destination_table_columns = 4;
  bool include_statistics = 5;
}

message SyncCaptureResponse {
  uint64 tables_scanned = 1;
  uint64 tables_changed = 2;
  uint64 errors = 3;
}

message TriggerReconcileRequest {
  ai.floedb.floecat.common.ResourceId connector_id = 1;
  bool full_rescan = 2;
  repeated NamespacePath destination_namespace_paths = 3;
  string destination_table_display_name = 4;
  repeated string destination_table_columns = 5;
}
message TriggerReconcileResponse {
  string job_id = 1;
}

message GetReconcileJobRequest {
  string job_id = 1;
}
message GetReconcileJobResponse {
  string job_id = 1;
  string connector_id = 2;
  JobState state = 3;
  string message = 4;
  google.protobuf.Timestamp started_at = 5;
  google.protobuf.Timestamp finished_at = 6;
  uint64 tables_scanned = 7;
  uint64 tables_changed = 8;
  uint64 errors = 9;
}
enum JobState {
  JS_UNSPECIFIED = 0;
  JS_QUEUED = 1;
  JS_RUNNING = 2;
  JS_SUCCEEDED = 3;
  JS_FAILED = 4;
  JS_CANCELLED = 5;
}

service Connectors {
  rpc GetConnector(GetConnectorRequest) returns (GetConnectorResponse);
  rpc ListConnectors(ListConnectorsRequest) returns (ListConnectorsResponse);
  rpc CreateConnector(CreateConnectorRequest) returns (CreateConnectorResponse);
  rpc UpdateConnector(UpdateConnectorRequest) returns (UpdateConnectorResponse);
  rpc DeleteConnector(DeleteConnectorRequest) returns (DeleteConnectorResponse);

  rpc ValidateConnector(ValidateConnectorRequest) returns (ValidateConnectorResponse);

  rpc SyncCapture(SyncCaptureRequest) returns (SyncCaptureResponse);
  rpc TriggerReconcile(TriggerReconcileRequest) returns (TriggerReconcileResponse);
  rpc GetReconcileJob(GetReconcileJobRequest) returns (GetReconcileJobResponse);
}
